--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "@react-navigation/stack": "^7.4.2",
     "@supabase/supabase-js": "^2.50.2",
-    "expo": "~53.0.13",
+    "expo": "^53.0.17",
     "expo-blur": "^14.1.5",
+    "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.4",
-    "react-native-gesture-handler": "^2.27.1",
+    "react-native": "^0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.18.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-haptics": "~14.1.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
