--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-blur": "^14.1.5",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "~14.1.5",
+    "expo-location": "^18.1.6",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
